--- a/redis.conf
+++ b/redis.conf
@@ -3,3 +3,5 @@ bind 127.0.0.1
 databases 16
 append_only yes
 append_filename appendonly.aof
+self 127:0.0.1:6379
+peers 127:0.0.1:6380,127:0.0.1:6381
