--- a/redis.conf
+++ b/redis.conf
@@ -1,7 +1,7 @@
-port 6379
-bind 127.0.0.1
+bind 0.0.0.0
+port 6380
 databases 16
-append_only yes
-append_filename appendonly.aof
-self 127:0.0.1:6379
-peers 127:0.0.1:6380,127:0.0.1:6381
+appendonly yes
+appendfilename appendonly.aof
+# self 127.0.0.1:6380
+# peers 127.0.0.1:6381
